--- a/app/views/refinery/admin/pages/_actions.html.erb
+++ b/app/views/refinery/admin/pages/_actions.html.erb
@@ -1,5 +1,5 @@
 <%= render '/refinery/admin/search', :url => refinery.admin_pages_path %>
-<% content_for :submenu do %>
+<% content_for :admin_submenu do %>
 <ul class="list-unstyled">
   <li>
     <%= link_to t('<i class="icon icon-add"></i>' '.create_new_page'), refinery.new_admin_page_path %>
