--- a/app/views/refinery/admin/_head.html.erb
+++ b/app/views/refinery/admin/_head.html.erb
@@ -1,16 +1,10 @@
-<head>
-  <meta charset='<%= ::Rails.application.config.encoding %>' />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <%= yield :meta %>
-  <title><%= Refinery::Core.site_name -%> - Refinery</title>
-  <%= csrf_meta_tags %>
-  <% custom_stylesheets.each do |css| %>
-    <%= stylesheet_link_tag css.path, css.options %>
-  <% end %>
-  <%= yield :stylesheets %>
-  <%= render 'refinery/admin/javascripts' %>
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+<title><%= Refinery::Core.site_name -%> - Refinery</title>
+<%= csrf_meta_tags %>
+<%#= stylesheet_link_tag 'refinery/refinery' %>
+<% custom_stylesheets.each do |css| %>
+  <%= stylesheet_link_tag css.path, css.options %>
+<% end %>
+<%= render 'refinery/admin/javascripts' %>
 
-<script type="text/javascript" src="//use.typekit.net/vle4bcj.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
-
-</head>
+<%= render '/refinery/head_common' %>
