--- a/app/views/refinery/admin/pages/edit.html.erb
+++ b/app/views/refinery/admin/pages/edit.html.erb
@@ -1,1 +1,8 @@
-<%= render 'form' %>
+<% content_for :admin_sidebar do %>
+  <%= render 'form' %>
+<% end %>
+
+<% content_for :admin_page_preview do %>
+  <%= render '/refinery/pages/show' %>
+<% end %>
+
