Put site_bar back & style the main nav in preview

--- a/app/assets/stylesheets/refinery-backend.scss
+++ b/app/assets/stylesheets/refinery-backend.scss
@@ -343,4 +343,11 @@ body{
   right: 0;
 }
 
-
+#page-preview{
+  header#header{
+    position: relative;
+  }
+  .navbar-fixed-top{
+    position: absolute;
+  }
+}
