--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -5,7 +5,9 @@
     <%= render '/refinery/admin/head' %>
   </head>
   <body class="<%= action_name %> <%= I18n.locale %>">
+    <%= render '/refinery/site_bar' %>
     <!-- div id='tooltip_container'></div -->
+
     <section id="wrapper">
       <section id="sidebar-left">
         <%= render 'refinery/admin/menu' %>
