--- a/app/assets/stylesheets/partials/_icons-glass.scss
+++ b/app/assets/stylesheets/partials/_icons-glass.scss
@@ -1,87 +1,87 @@
-.icon-trash:before {
+.gcicon-trash:before {
   content: "a";
 }
-.icon-edit:before {
+.gcicon-edit:before {
   content: "b";
 }
-.icon-add:before {
+.gcicon-add:before {
   content: "c";
 }
-.icon-search:before {
+.gcicon-search:before {
   content: "e";
 }
-.icon-screen:before {
+.gcicon-screen:before {
   content: "f";
 }
-.icon-sitemap:before {
+.gcicon-sitemap:before {
   content: "g";
 }
-.icon-file:before {
+.gcicon-file:before {
   content: "h";
 }
-.icon-folder:before {
+.gcicon-folder:before {
   content: "i";
 }
-.icon-folder-open:before {
+.gcicon-folder-open:before {
   content: "j";
 }
-.icon-reorder:before {
+.gcicon-reorder:before {
   content: "k";
 }
-.icon-photo:before {
+.gcicon-photo:before {
   content: "l";
 }
-.icon-film:before {
+.gcicon-film:before {
   content: "m";
 }
-.icon-check:before {
+.gcicon-check:before {
   content: "o";
 }
-.icon-cancel:before {
+.gcicon-cancel:before {
   content: "p";
 }
-.icon-log-out:before {
+.gcicon-log-out:before {
   content: "r";
 }
-.icon-plus:before {
+.gcicon-plus:before {
   content: "q";
 }
-.icon-play:before {
+.gcicon-play:before {
   content: "s";
 }
-.icon-align-center:before {
+.gcicon-align-center:before {
   content: "d";
 }
-.icon-align-left:before {
+.gcicon-align-left:before {
   content: "n";
 }
-.icon-bold:before {
+.gcicon-bold:before {
   content: "t";
 }
-.icon-font:before {
+.gcicon-font:before {
   content: "u";
 }
-.icon-italic:before {
+.gcicon-italic:before {
   content: "v";
 }
-.icon-list-bullet:before {
+.gcicon-list-bullet:before {
   content: "w";
 }
-.icon-list-number:before {
+.gcicon-list-number:before {
   content: "x";
 }
-.icon-quote:before {
+.gcicon-quote:before {
   content: "y";
 }
-.icon-heading:before {
+.gcicon-heading:before {
   content: "z";
 }
-.icon-paragraph:before {
+.gcicon-paragraph:before {
   content: "A";
 }
-.icon-link:before {
+.gcicon-link:before {
   content: "B";
 }
-.icon-gear:before {
+.gcicon-gear:before {
   content: "C";
 }
