--- a/app/views/refinery/_site_bar.html.erb
+++ b/app/views/refinery/_site_bar.html.erb
@@ -11,7 +11,7 @@
         <a href=""><%= Refinery::Core.site_name %></a>
       </div>
       <div class="pull-right">
-        <a href="">Log out <i class="icon icon-log-out"></i></a>
+        <a href="">Log out <i class="gcicon gcicon-log-out"></i></a>
         
        <!--
  <%= link_to t('.log_out', site_bar_translate_locale_args),
