--- a/app/views/refinery/admin/pages/_page.html.erb
+++ b/app/views/refinery/admin/pages/_page.html.erb
@@ -2,9 +2,9 @@
 
     <span  class="page-title">
       <% if page.children.present? %>
-        <% if Refinery::Pages.auto_expand_admin_tree %> <i class="icon icon-folder-open"></i> <% else %> <i class="icon icon-folder"></i> <% end %>
+        <% if Refinery::Pages.auto_expand_admin_tree %> <i class="gcicon gcicon-folder-open"></i> <% else %> <i class="gcicon gcicon-folder"></i> <% end %>
       <% else %>
-        <i class="icon icon-file"></i>
+        <i class="gcicon gcicon-file"></i>
       <% end %>
   
       <span class='title <%= 'toggle' if page.children.present? %>'>
@@ -24,7 +24,7 @@
     
     <span class='actions'>
       <span class="delete">
-        <%= link_to '<i class="icon icon-trash"></i>'.html_safe,
+        <%= link_to '<i class="gcicon gcicon-trash"></i>'.html_safe,
                   refinery.admin_page_path(page.nested_url),
                   :class => "cancel confirm-delete circle",
                   :title => t('delete', :scope => 'refinery.admin.pages'),
@@ -38,7 +38,7 @@
       </span>
     
       <span class="preview">
-        <%= link_to '<i class="icon icon-screen"></i>'.html_safe,
+        <%= link_to '<i class="gcicon gcicon-screen"></i>'.html_safe,
                   page.url,
                   :target => "_blank",
                   :class => "circle",
@@ -46,14 +46,14 @@
       </span>
       
       <span class="edit">
-        <%= link_to '<i class="icon icon-edit"></i>'.html_safe,
+        <%= link_to '<i class="gcicon gcicon-edit"></i>'.html_safe,
                   refinery.edit_admin_page_path(page.nested_url, :switch_locale => (page.translations.first.locale unless page.translated_to_default_locale?)),
                   :class => "circle",
                   :title => t('edit', :scope => 'refinery.admin.pages') %>
       </span>
       
       <span class="add-child">           
-        <%= link_to '<i class="icon icon-add"></i>'.html_safe,
+        <%= link_to '<i class="gcicon gcicon-add"></i>'.html_safe,
                   refinery.new_admin_page_path(:parent_id => page.id),
                   :class => "circle",
                   :title => t('new', :scope => 'refinery.admin.pages') %>
