--- a/app/views/refinery/admin/pages/new.html.erb
+++ b/app/views/refinery/admin/pages/new.html.erb
@@ -24,13 +24,13 @@
     <footer>Someone famous</footer>
   </blockquote>
   <div class="highlight-editor">
-    <a href=""><i class="icon icon-bold"></i></a>
-    <a href=""><i class="icon icon-italic"></i></a>
-    <a href=""><i class="icon icon-heading"></i></a>
-    <a href=""><i class="icon icon-list-bullet"></i></a>
-    <a href=""><i class="icon icon-list-number"></i></a>
-    <a href=""><i class="icon icon-quote"></i></a>
-    <a href=""><i class="icon icon-link"></i></a>
+    <a href=""><i class="gcicon gcicon-bold"></i></a>
+    <a href=""><i class="gcicon gcicon-italic"></i></a>
+    <a href=""><i class="gcicon gcicon-heading"></i></a>
+    <a href=""><i class="gcicon gcicon-list-bullet"></i></a>
+    <a href=""><i class="gcicon gcicon-list-number"></i></a>
+    <a href=""><i class="gcicon gcicon-quote"></i></a>
+    <a href=""><i class="gcicon gcicon-link"></i></a>
   </div>
   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
   <img class="img-responsive pull-left" src="/assets/testimonial-lego.jpg"/>
@@ -40,20 +40,20 @@
 </div>
         
 <div class="new-module">
-  <a href="" class="circle-icon add-module"><i class="icon icon-plus"></i></a>
+  <a href="" class="circle-gcicon add-module"><i class="gcicon gcicon-plus"></i></a>
   <div class="clearfix"></div>
 </div>
 
 <div class="new-module media-chooser">
-  <a href="" class="circle-icon add-module"><i class="icon icon-plus"></i></a>
-  <a href="" class="circle-icon media-type"><i class="icon icon-paragraph"></i></a>
-  <a href="" class="circle-icon media-type"><i class="icon icon-photo"></i></a>
-  <a href="" class="circle-icon media-type"><i class="icon icon-film"></i></a>
+  <a href="" class="circle-gcicon add-module"><i class="gcicon gcicon-plus"></i></a>
+  <a href="" class="circle-gcicon media-type"><i class="gcicon gcicon-paragraph"></i></a>
+  <a href="" class="circle-gcicon media-type"><i class="gcicon gcicon-photo"></i></a>
+  <a href="" class="circle-gcicon media-type"><i class="gcicon gcicon-film"></i></a>
   <div class="clearfix"></div>
 </div>
 
 <div class="new-module media-chooser">
-  <a href="" class="circle-icon add-module"><i class="icon icon-plus"></i></a>
+  <a href="" class="circle-gcicon add-module"><i class="gcicon gcicon-plus"></i></a>
   <form class="form-inline" role="form">
     <div class="form-group">
       <div class="input-group">
