--- a/app/views/refinery/admin/pages/new.html.erb
+++ b/app/views/refinery/admin/pages/new.html.erb
@@ -40,20 +40,20 @@
 </div>
         
 <div class="new-module">
-  <a href="" class="circle-gcicon add-module"><i class="gcicon gcicon-plus"></i></a>
+  <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
   <div class="clearfix"></div>
 </div>
 
 <div class="new-module media-chooser">
-  <a href="" class="circle-gcicon add-module"><i class="gcicon gcicon-plus"></i></a>
-  <a href="" class="circle-gcicon media-type"><i class="gcicon gcicon-paragraph"></i></a>
-  <a href="" class="circle-gcicon media-type"><i class="gcicon gcicon-photo"></i></a>
-  <a href="" class="circle-gcicon media-type"><i class="gcicon gcicon-film"></i></a>
+  <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
+  <a href="" class="circle-icon media-type"><i class="gcicon gcicon-paragraph"></i></a>
+  <a href="" class="circle-icon media-type"><i class="gcicon gcicon-photo"></i></a>
+  <a href="" class="circle-icon media-type"><i class="gcicon gcicon-film"></i></a>
   <div class="clearfix"></div>
 </div>
 
 <div class="new-module media-chooser">
-  <a href="" class="circle-gcicon add-module"><i class="gcicon gcicon-plus"></i></a>
+  <a href="" class="circle-icon add-module"><i class="gcicon gcicon-plus"></i></a>
   <form class="form-inline" role="form">
     <div class="form-group">
       <div class="input-group">
