--- a/app/views/refinery/admin/pages/_actions.html.erb
+++ b/app/views/refinery/admin/pages/_actions.html.erb
@@ -2,7 +2,7 @@
 <% content_for :admin_submenu do %>
 <ul class="list-unstyled">
   <li>
-    <%= link_to t('<i class="gcicon gcicon-add"></i>' '.create_new_page'), refinery.new_admin_page_path %>
+    <%= link_to '<i class="gcicon gcicon-add"></i>'.html_safe + t('.create_new_page'), refinery.new_admin_page_path %>
   </li>
 <!--
 <% if @pages.many? and !searching? %>
