--- a/app/assets/stylesheets/refinery-backend.scss
+++ b/app/assets/stylesheets/refinery-backend.scss
@@ -180,22 +180,29 @@ body{
 #admin-page-content{
   ul{
     li{
-      padding: 10px 0;
       border-bottom: 1px solid $grey-2;
       margin-bottom: 0;
-      &:hover{
-        .actions{
-          opacity: 1;
-        }
-      }
       &:last-of-type{
         border: none;
         padding-bottom: 0;
       }
       .page-row{
+        margin-bottom: 0;
+        &:hover{
+          .actions{
+            opacity: 1;
+          }
+          .page-title{
+            color: $primary-hover;
+          }
+        }
         .page-title{
           font-size: 18px;
-          letter-spacing: 1px;  
+          letter-spacing: 1px;
+          display: inline-block;
+          width: calc(100% - 160px); 
+          padding: 10px 0;
+          color: $grey-6;
           .label{
             background: $grey-2;
             text-transform: capitalize;
@@ -210,7 +217,7 @@ body{
           float: right;
           opacity: 0;
           position: relative;
-          top: -1px;
+          top: 10px;
           span{
             width: 30px;
             text-align: center;
@@ -225,13 +232,17 @@ body{
                 color: $primary-dark;
                 border-color: $primary-dark;
               }
+              .gcicon{
+                position: relative;
+                top: 1px;
+              }
             }
           }
         }
       }
     }
     .nested{
-      margin: 10px 0 0 0;
+      margin: 0 0 0 0;
       &:empty{
         margin: 0;
       }
