--- a/app/assets/stylesheets/partials/_icons-glass.scss
+++ b/app/assets/stylesheets/partials/_icons-glass.scss
@@ -85,3 +85,12 @@
 .gcicon-gear:before {
   content: "C";
 }
+.gcicon-index:before {
+  content: "D";
+}
+.gcicon-list:before {
+  content: "E";
+}
+.gcicon-move:before {
+  content: "F";
+}
