--- a/app/assets/stylesheets/partials/_icon-styles-glass.scss
+++ b/app/assets/stylesheets/partials/_icon-styles-glass.scss
@@ -1,12 +1,12 @@
 /* -------------------- ICONS -------------------- */
 
 @font-face {
-  font-family: "refinery";
-  src:url("/assets/refinery.eot");
-  src:url("/assets/refinery.eot?#iefix") format("embedded-opentype"),
-    url("/assets/refinery.woff") format("woff"),
-    url("/assets/refinery.ttf") format("truetype"),
-    url("/assets/refinery.svg#refinery") format("svg");
+  font-family: "refinery-glass";
+  src:url("/assets/refinery-glass.eot");
+  src:url("/assets/refinery-glass.eot?#iefix") format("embedded-opentype"),
+    url("/assets/refinery-glass.woff") format("woff"),
+    url("/assets/refinery-glass.ttf") format("truetype"),
+    url("/assets/refinery-glass.svg#refinery") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -17,11 +17,11 @@ $gcicon-css-prefix: gcicon !default;
 
 .#{$gcicon-css-prefix} {
   display: inline-block;
-  font-family: "refinery";
+  font-family: "refinery-glass";
 }
 
 [data-icon]:before {
-  font-family: "refinery" !important;
+  font-family: "refinery-glass" !important;
   content: attr(data-icon);
   font-style: normal !important;
   font-weight: normal !important;
@@ -35,7 +35,7 @@ $gcicon-css-prefix: gcicon !default;
 
 [class^="gcicon-"]:before,
 [class*=" gcicon-"]:before {
-  font-family: "refinery" !important;
+  font-family: "refinery-glass" !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-variant: normal !important;
