--- a/app/assets/stylesheets/refinery-backend.scss
+++ b/app/assets/stylesheets/refinery-backend.scss
@@ -1,5 +1,7 @@
 @import "config/mixins";
 @import "config/variables";
+@import "config/base-mixins";
+@import "config/base-variables";
 @import "bootstrap/variables";
 @import "bootstrap/mixins";
 @import "partials/main";
@@ -98,9 +100,9 @@ body{
       width: 100%;
     }
   }
-  height: calc(100%);
+  min-height: 100%;
   .sidebar{
-    height: 100%;
+    height: calc(100% - 34px);
     width: 230px;
     float: left;
     padding: 34px 15px 0;
@@ -112,7 +114,7 @@ body{
       width: 230px;
       height: 100%;
       margin-left: -15px;
-      padding: 15px 0 60px;
+      padding: 15px 0 30px;
       border-right: 1px solid $grey-2;
       position: fixed;
       overflow-y: scroll;
@@ -152,7 +154,7 @@ body{
           margin-bottom: 10px;
           li{
             a{
-              padding: 3px 15px 3px 30px;
+              padding: 4px 15px 4px 30px;
               font-size: 13px;
               font-weight: 400;
               background: $white-opaque;
@@ -166,6 +168,7 @@ body{
         font-size: 14px;
         letter-spacing: 1px;
         text-transform: uppercase;
+        background: darken($white-opaque, 3%);
         .gcicon{
           margin-right: 8px;
         }
@@ -174,7 +177,7 @@ body{
   }
   .inner-wrapper{
     width: calc(100% - 460px);
-    height: 100%;
+    height: calc(100% - 34px);
     float: left;
   }
   #sidebar-right{
@@ -275,15 +278,21 @@ body{
 }
 
 #page-preview{
-  *[contenteditable=true]:focus{
-    outline: none;
-    position: relative;
-    border-left: 2px solid $primary-fade;
-    padding-left: 15px;
-    margin-left: -17px;
-    border-right: 2px solid $primary-fade;
-    padding-right: 15px;
-    margin-right: -17px;
+  *[contenteditable=true]{
+      position: relative;
+      border-left: 2px solid transparent;
+      padding-left: 15px;
+      margin-left: -17px;
+      border-right: 2px solid transparent;
+      padding-right: 15px;
+      margin-right: -17px;
+    &:focus{
+      outline: none;
+      border-color: $primary-fade !important;
+    }
+    &:hover{
+      border-color: rgba($primary-fade, 0.3);
+    }
   }
   .new-module{
     display: block;
@@ -325,6 +334,12 @@ body{
         top: 1px;
         left: 1px;
         @include rotate(45deg);
+      }
+    }
+    .media-type{
+      .gcicon{
+        top: 3px;
+        position: relative;
       }
     }
     .input-group{
@@ -386,5 +401,9 @@ body{
   .navbar-fixed-top{
     position: absolute;
     top: 40px;
+  }
+  .page-preview-content{
+    padding-left: 60px;
+    padding-right: 60px;
   }
 }
