Main wrapper class when no right sidebar

--- a/app/views/layouts/refinery/admin.html.erb
+++ b/app/views/layouts/refinery/admin.html.erb
@@ -15,7 +15,8 @@
         </div>
       </section>
       
-      <section class="inner-wrapper">
+      
+      <section class="inner-wrapper <%= 'single-sidebar' unless content_for?(:admin_sidebar) %>">
         <div id="flash_container">
           <%= render '/refinery/no_script' %>
           <%= render '/refinery/message' %>
